<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apps.cursos.com.contactostarea.SegundaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirmar_datos"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:editable="false"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/lb_nombre_completo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:editable="false"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/lb_fecha_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_fecha_nacimiento"
        android:editable="false"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/lb_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono"
        android:editable="false"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/lb_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"
        android:editable="false"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/lb_descripcion_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_descripcion_contacto"
        android:editable="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_editar_datos"
        android:id="@+id/btn_editar_datos"
        android:theme="@style/MiBotton"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
